--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPasswordConfirmation.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/ForgotPasswordConfirmation.cshtml
@@ -1,4 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Перейдите по ссылке в вашей эл. почте для сброса пароля";
 }
-<h3>Перейдите по ссылке, отправленной на вашу эл. почту для сброса пароля</h3>
+<div class="text-center">
+    <h3>Перейдите по ссылке, отправленной на вашу эл. почту для сброса пароля</h3>
+</div>
