--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -141,7 +141,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 - Web.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2024 - Web.MVC - <a class="privacy-link" asp-area="" asp-controller="Information" asp-action="Privacy">Пользовательское соглашение</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
