--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -139,9 +139,9 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2024 - Web.MVC - <a class="privacy-link" asp-area="" asp-controller="Information" asp-action="Privacy">Пользовательское соглашение</a>
+<footer class="border-top custom-footer text-muted">
+     <div class="container">
+        <p>&copy; 2024 Web.MVC <a class="privacy-link margin-left" asp-area="" asp-controller="Information" asp-action="TermsOfUse">Пользовательское соглашение</a><a class="privacy-link margin-left" asp-area="" asp-controller="Information" asp-action="Privacy">Политика конфиденциальности</a><a class="privacy-link margin-left" asp-area="" asp-controller="Information" asp-action="Rules">Правила пользования</a></p>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
