--- a/src/Web/Web.MVC/Web.MVC/Views/Information/Rules.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Information/Rules.cshtml
@@ -1,1 +1,28 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Правила";
+}
+<link rel="stylesheet" href="~/css/information/Rules.css"/> 
+
+<div class="text-center">
+    <h2>Правила</h2>
+</div>
+
+<div class="rules-page-container">
+    <div class="margin-bottom-3">
+        <h4>Общие</h4>
+        <p class="mb-0"><strong>1.1</strong> Запрещено создавать темы/обсуждения/комментарии, не несущие смысловой нагрузки.</p>
+    </div>
+    
+    <div class="margin-bottom-3">
+        <h4>Правила тем</h4>
+        <p class="mb-0"><strong>2.1</strong> Первая буква темы должна быть заглавной, остальные - строчными.</p>
+        <p class="mb-0"><strong>3.3</strong> Название темы НЕ должно оканчиваться точкой.</p>
+    </div>
+
+    <div>
+        <h4>Правила обсуждений</h4>
+        <p class="mb-0"><strong>3.1</strong> Обсуждение должно соответствовать теме.</p>
+        <p class="mb-0"><strong>3.2</strong> Заголовок обсуждения должен начинаться с заглавной буквы.</p>
+        <p class="mb-0"><strong>3.3</strong> Заголовок обсуждения НЕ должен оканчиваться точкой.</p>
+    </div>
+</div>
