--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Web.MVC.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/layout.css"/>
+    <link rel="icon" type="image/png" href="~/images/rounded-logo1.png" />
 </head>
 <body>
 <header class="header">
