--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussion.cshtml
@@ -66,10 +66,20 @@
                     </form>
                 } 
                 <a asp-action="AddReport" asp-controller="Report" asp-route-reportedUserName="@ViewBag.CreatedBy" asp-route-reportedDiscussionId="@ViewBag.DiscussionId">Пожаловаться</a>
-                <form method="post" asp-controller="Bookmark" asp-action="AddBookmark" asp-route-returnUrl="@returnUrl" asp-route-discussionId="@ViewBag.DiscussionId"
-                      asp-route-discussionTitle="@ViewBag.Title">
-                    <input class="add-bookmark" type="submit" value="Добавить в закладки" />
-                </form>
+                @if (ViewBag.IsInBookmarks)
+                {
+                    <form method="post" asp-controller="Bookmark" asp-action="DeleteBookmark" asp-route-returnUrl="@returnUrl"
+                          asp-route-bookmarkId="@ViewBag.BookmarkId">
+                        <input class="add-bookmark" type="submit" value="Удалить из закладок" />
+                    </form> 
+                }
+                else
+                {
+                    <form method="post" asp-controller="Bookmark" asp-action="AddBookmark" asp-route-returnUrl="@returnUrl" asp-route-discussionId="@ViewBag.DiscussionId"
+                          asp-route-discussionTitle="@ViewBag.Title">
+                        <input class="add-bookmark" type="submit" value="Добавить в закладки" />
+                    </form>
+                }
             }
             else
             {
