--- a/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Shared/_Layout.cshtml
@@ -144,7 +144,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2024 Web.MVC <a class="privacy-link margin-left" asp-area="" asp-controller="Information" asp-action="Rules">Правила пользования</a>
+        &copy; 2025 Forumium <a class="privacy-link margin-left" asp-area="" asp-controller="Information" asp-action="Rules">Правила пользования</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
