--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/discussionsList.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/discussion/discussionsList.css
@@ -1,5 +1,5 @@
 ﻿.border-div {
-    border: 1.5px solid #ccc;
+    border: 1.5px solid white;
     padding: 10px 20px 5px;
     margin: 5px 20%;
     width: 60%;
