--- a/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByNovelty.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Discussion/GetDiscussionsSortedByNovelty.cshtml
@@ -16,7 +16,7 @@
         </a>
         <p class="rating-value" data-value="@discussion.Rating">Рейтинг: @discussion.Rating</p>
         <p>Создано: @discussion.CreatedBy</p>
-        <p>Дата создания: @discussion.CreatedAt</p>
+        <p>Дата создания: @discussion.CreatedAt.ToString("dd.MM.yyyy")</p>
     </div>
 }
 <div class="pagination-link-container">
