--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUsersCreatedComments.cshtml
@@ -76,7 +76,7 @@
                 <a class="discussion-title" asp-controller="Discussion" asp-action="GetDiscussion" asp-route-id="@comment.DiscussionId"
                    asp-route-pageNumber="1"asp-route-pageSize="20">@comment.Content
                 </a>
-                <p>Создано: @comment.CreatedDate.ToString("hh:mm dd.MM.yyyy")</p>
+                <p>Создано: @comment.CreatedDate.ToString("HH:mm dd.MM.yyyy")</p>
             </div>
         }
     }
